helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast57-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast57
  template:
    metadata:
      labels:
        app: fast57
    spec:
      containers:
      - name: fast57
        image: fast57:latest
        ports:
        - containerPort: 8080
